fix: Update activation function to sigmoid for improved performance

--- a/percepton.ipynb
+++ b/percepton.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "2df0e80f",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "d09a68e9",
    "metadata": {},
    "outputs": [],
@@ -35,8 +35,11 @@
     "        self.errors_history: list[int] = []\n",
     "        \n",
     "    def _activation(self, x: NDArray[np.float64]) -> NDArray[np.int64]:\n",
-    "        \"\"\"Função de ativação degrau (Step Function): Retorna 1 se x >= 0, senão 0.\"\"\"\n",
-    "        return np.where(x >= 0, 1, 0)\n",
+    "        \"\"\"Função de ativação sigmoid. Retorna 1 se sigmoid(x) >= 0.5, senão 0.\"\"\"\n",
+    "        # Protege contra overflow ao calcular exp\n",
+    "        z = np.clip(x, -500, 500)\n",
+    "        probs = 1.0 / (1.0 + np.exp(-z))\n",
+    "        return (probs >= 0.5).astype(np.int64)\n",
     "    \n",
     "    def fit(self, X: NDArray[np.float64], y: NDArray[np.int64]) -> 'Perceptron':\n",
     "        \"\"\"\n",
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "db8e2d5b",
    "metadata": {},
    "outputs": [],
@@ -127,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "967d6ebc",
    "metadata": {},
    "outputs": [
